# mandelbrot-rs

./: Cargo.toml  README.md
shaders/: dfractal.frag  fractal.frag  fractal.vert  texture.frag
src/: main.rs
src/graphics/: framebuffer.rs  mod.rs  texture.rs  vao.rs  vbo.rs
src/graphics/shader/: fragment.rs  geometry.rs  mod.rs  program.rs  tess_control.rs  tess_evaluation.rs  vertex.rs
