[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Rimpampa <riccardo.ripanti01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
memoffset = "0.5.3"
rand = "0.6.5"

[dependencies.sdl2]
version = "0.32.2"
features = ["bundled", "static-link"]